fix scrolling issues and bg repeat on firefox

--- a/styles/main.less
+++ b/styles/main.less
@@ -37,6 +37,7 @@ body {
 
 header {
     background: url(/images/buildings.svg);
+    background-repeat: repeat-x;
     box-sizing: border-box;
     margin-bottom: 16px;
     text-align: center;
@@ -71,8 +72,7 @@ div {
     margin: 0 auto;
     &.bottom {
         clear: both;
-        height: 2.5em;
-        padding-top: 2em;
+        padding: 32px 0;
         text-align: center;
         width: 100%;
     }
